Stop attaching 'cache-control: max-age=0' in sendBeacon

We've attached the header to requests initiated by sendBeacon() but it
is not spec conformant. Let's stop doing that.

Bug: 755725
Change-Id: Ia8b85a27b84c77b35edc211c325490467c853330
Reviewed-on: https://chromium-review.googlesource.com/952104
Reviewed-by: Adam Rice <ricea@chromium.org>
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541719}
Former-commit-id: 3c032f9d5bf7a7f60941c2baa3714b0f04705ea6