third_party/WebKit/Source/core/loader/PingLoader.cpp
@@ -187,7 +187,6 @@ bool SendBeaconCommon(LocalFrame* frame,
 
   ResourceRequest request(url);
   request.SetHTTPMethod(HTTPNames::POST);
-  request.SetHTTPHeaderField(HTTPNames::Cache_Control, "max-age=0");
   request.SetKeepalive(true);
   request.SetRequestContext(WebURLRequest::kRequestContextBeacon);
   beacon.Serialize(request);
